// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should drop index with algorithm option. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "index": "i_oid",
            "options": [
              {
                "def": {
                  "algorithm": "default",
                },
                "id": "P_INDEX_ALGORITHM_OPTION",
              },
              {
                "def": {
                  "lock": "none",
                },
                "id": "P_LOCK_OPTION",
              },
            ],
            "table": "people",
          },
          "id": "P_DROP_INDEX",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should drop index with algorithm option. 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "index": "i_oid",
            "options": [
              {
                "def": {
                  "algorithm": "default",
                },
                "id": "P_INDEX_ALGORITHM_OPTION",
              },
              {
                "def": {
                  "lock": "none",
                },
                "id": "P_LOCK_OPTION",
              },
            ],
            "table": "people",
          },
          "id": "P_DROP_INDEX",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should drop index with algorithm option. 3`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "index": "i_oid",
            "options": [
              {
                "def": {
                  "algorithm": "default",
                },
                "id": "P_INDEX_ALGORITHM_OPTION",
              },
              {
                "def": {
                  "lock": "none",
                },
                "id": "P_LOCK_OPTION",
              },
            ],
            "table": "people",
          },
          "id": "P_DROP_INDEX",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should drop index with lock option 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "index": "i_oid",
            "options": [
              {
                "def": {
                  "lock": "default",
                },
                "id": "P_LOCK_OPTION",
              },
            ],
            "table": "people",
          },
          "id": "P_DROP_INDEX",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should drop index with lock option 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "index": "i_oid",
            "options": [
              {
                "def": {
                  "lock": "default",
                },
                "id": "P_LOCK_OPTION",
              },
            ],
            "table": "people",
          },
          "id": "P_DROP_INDEX",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should drop index with lock option 3`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "index": "i_oid",
            "options": [
              {
                "def": {
                  "lock": "default",
                },
                "id": "P_LOCK_OPTION",
              },
            ],
            "table": "people",
          },
          "id": "P_DROP_INDEX",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should drop index. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "index": "i_oid",
            "options": [],
            "table": "people",
          },
          "id": "P_DROP_INDEX",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;
